# simple-blog-backend

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-04-02-084716_create_users/: down.sql  up.sql
migrations/2025-04-02-093007_create_posts/: up.sql
migrations/2025-04-02-122052_create_comments/: up.sql
migrations/2025-04-02-123213_create_likes/: down.sql  up.sql
migrations/2026-01-22-170305-0000_add_roles/: down.sql  up.sql
migrations/2026-03-04-092947-0000_role_not_null/: down.sql  up.sql
migrations/2026-03-04-112620-0000_add_role/: down.sql  up.sql
migrations/2026-05-19-113705-0000_add_date_to_comments/: down.sql  up.sql
migrations/2026-06-23-124426-0000_add_avatar/: down.sql  up.sql
src/: main.rs  schema.rs
src/api/: auth.rs  comment.rs  cors.rs  index.rs  jwt.rs  like.rs  mod.rs  post.rs  user.rs
src/db/: db_connection.rs  mod.rs  models.rs  pagination.rs
src/db/dto/: comment_dto.rs  mod.rs  post_dto.rs  user_dto.rs
src/db/models/: comment_models.rs  like_models.rs  mod.rs  post_models.rs  user_models.rs  user_role.rs
src/db/repos/: comment_like_repository.rs  comment_repository.rs  error.rs  helpers.rs  mod.rs  post_like_repository.rs  post_repository.rs  user_repository.rs
src/routes/: auth_routes.rs  comment_like_routes.rs  comment_routes.rs  cors.rs  index.rs  jwt.rs  like_routes.rs  mod.rs  post_like_routes.rs  post_routes.rs  user_routes.rs
src/services/: auth_service.rs  comment_like_service.rs  comment_service.rs  error.rs  mod.rs  post_like_service.rs  post_service.rs  user_service.rs
