[package]
name = "simple-blog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenvy = "0.15"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
chrono = {version = "0.4.40", features = ["serde"]}
sha2 = "0.10.9"
base64 = "0.22.1"
serde_json = "1.0.149"
hmac = "0.12.1"
rocket_cors = "0.6.0"
